fix plot pages maybe

--- a/style.css
+++ b/style.css
@@ -50,4 +50,13 @@ ul {
 #contact-info {
     width: 30%;
   }
+  .box {
+    height: 400px;
+    padding: 20px;
+    color: #fff;
+    background: deepskyblue;
+  }
   
+  .margin-top-80 {
+    margin-top: 80px;
+  }
